css style and html pages updated header div

--- a/updatePassword.html
+++ b/updatePassword.html
@@ -2,11 +2,14 @@
 <html>
 <head>
     <title>Create new password</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Create new Password</h1>
-
+    <div class="header">
+        <h1>Create new password</h1>
+    </div>
     <label>New Password: </label>
     <input type="password" name="password"><br><br>
 
