--- a/login.html
+++ b/login.html
@@ -2,10 +2,15 @@
 <html>
 <head>
     <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Login</h1>
+    <div class="header">
+        <h1>Login</h1>
+    </div>
+    
     <label>Email Address: </label>
     <input type="email" name="email"><br><br>
 
