--- a/CreateAccount.html
+++ b/CreateAccount.html
@@ -4,6 +4,8 @@
     <title>Create Account</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,33 +13,44 @@
     <div class="header">
         <h1>Create Account</h1>
     </div>
-    <label>First Name: </label>
-    <input type="text" name="first_name"><br><br>
+    <div class="container createAccount">
+        <div class="row">
+            <label for="first_name" class="col-md-6">First Name: </label>
+    <input type="text" class="form-control col-md-6" name="first_name"><br><br>
 
-    <label>Last Name: </label>
-    <input type="text" name="last_name"><br><br>
+    <label for="last_name" class="col-md-6">Last Name: </label>
+    <input type="text" class="form-control col-md-6" name="last_name"><br><br>
 
-    <label>Date Of Birth: </label>
-    <input type="text" name="dob"><br><br>
+    <label for="dob" class="col-md-6">Date Of Birth: </label>
+    <input type="text" class="form-control col-md-6" name="dob"><br><br>
 
-    <label>Email Address: </label>
-    <input type="email" name="email"><br><br>
+    <label for="email" class="col-md-6">Email Address: </label>
+    <input type="email" class="form-control col-md-6" name="email"><br><br>
 
-    <label>Contact Details: </label>
-    <input type="text" name="contact_details"><br><br>
+    <label for="contact_details" class="col-md-6">Contact Details: </label>
+    <input type="text" class="form-control col-md-6" name="contact_details"><br><br>
 
-    <label>Address: </label>
-    <input type="text" name="address"><br><br>
+    <label for="address" class="col-md-6">Address: </label>
+    <input type="text" class="form-control col-md-6" name="address"><br><br>
 
-    <label>Postal Code: </label>
-    <input type="text" name="postal_code"><br><br>
+    <label for="postal_code" class="col-md-6">Postal Code: </label>
+    <input type="text" class="form-control col-md-6" name="postal_code"><br><br>
 
-    <label>Password: </label>
-    <input type="password" name="password"><br><br>
+    <label for="password" class="col-md-6">Password: </label>
+    <input type="password" class="form-control col-md-6" name="password"><br><br>
 
-    <label>Confirm Password: </label>
-    <input type="password" name="confirm_password"><br><br>
-    <button type="button">Cancel</button>
-    <button type="button">Submit</button>
+    <label for="confirm_password" class="col-md-6">Confirm Password: </label>
+    <input type="password" class="form-control col-md-6" name="confirm_password"><br><br>
+    <div class="row createAccountButtons">
+        <div class="col-md-6">
+            <button type="button" class="btn btn-danger">Cancel</button>
+    
+        </div>
+        <div class="col-md-6 ">
+            <button type="button" class="btn btn-success">Submit</button>
+        </div>
+    </div>
+        </div>
+    </div>
 </body>
 </html>
