--- a/login.html
+++ b/login.html
@@ -4,6 +4,8 @@
     <title>Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,16 +13,18 @@
         <h1>Login</h1>
     </div>
     
-    <label>Email Address: </label>
-    <input type="email" name="email"><br><br>
+    <div class="container loginContainer">
+        <label for="email">Email Address: </label>
+    <input type="text" class="form-control" name="email"><br><br>
 
 
-    <label>Password: </label>
-    <input type="password" name="password"><br><br>
+    <label for="password">Password: </label>
+    <input type="password" class="form-control" name="password"><br><br>
     <a href="#">forgot password</a><br>
-    <a href="#">create an account</a><br>
+    <a href="/CreateAccount.html">create new account</a><br>
 
-    <button type="button">Cancel</button>
-    <button type="button">Login</button>
+    <button type="button" class="btn btn-danger">Cancel</button>
+    <button type="button" class="btn btn-success">Login</button>
+    </div>
 </body>
 </html>
