--- a/updatePassword.html
+++ b/updatePassword.html
@@ -4,18 +4,24 @@
     <title>Create new password</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
         <h1>Create new password</h1>
     </div>
-    <label>New Password: </label>
-    <input type="password" name="password"><br><br>
+    <br>
+    <div class="container updatePasswordContainer">
+        <label for="password" class="col-md-6">New Password: </label>
+    <input type="password" class="form-control col-md-6" name="password"><br><br>
 
-    <label>Confirm New Password: </label>
-    <input type="password" name="confirm_password"><br><br>
-    <button type="button">Cancel</button>
-    <button type="button">Submit</button>
+    <label for="confirm_password" class="col-md-6">Confirm New Password: </label>
+    <input type="password" class="form-control col-md-6" name="confirm_password"><br><br>
+    <button type="button" class="btn btn-danger">Cancel</button>
+    <button type="button" class="btn btn-success">Submit</button>
+    </div>
+    
 </body>
 </html>
